--- a/code/Rover_Project_Test_Notebook.ipynb
+++ b/code/Rover_Project_Test_Notebook.ipynb
@@ -395,6 +395,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
+    "collapsed": true,
     "inputHidden": false,
     "outputHidden": false
    },
@@ -450,7 +451,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -643,6 +646,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
